--- a/stylee.css
+++ b/stylee.css
@@ -1,11 +1,34 @@
 body {
-  background-image: url("Imagenes/scroll\ tomb\ raider.png");
+  background-image: url("Imagenes/scroll\ red\ heart.png");
   background-repeat: no-repeat;
   background-position: top center;
   background-size: cover; 
-  background-attachment:scroll; 
+  background-attachment: fixed; 
   margin: 0;
   min-height: 100vh;
+}
+header{
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%;
+  background-color: rgb(35, 2, 2);
+  padding: 5px 30px;
+  display: flex;
+  gap: 20px;
+  box-shadow: 0 2px 2px; rgba(0,0,0,0.3)
+}
+header nav{
+  display: flex;
+  gap: 90px;
+}
+ a {color: white;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 15px;
+  font-family:'TombRaider';
+}
+html {
+  scroll-padding-top: 250px; 
 }
 @font-face {
   font-family: 'TombRaider';
@@ -28,7 +51,7 @@ h1{ /*Web Developer*/
     text-align: center;
     font-family: TombRaider ;
     margin-top: 0%;
-    margin-bottom: 60%;
+    margin-bottom: 25%;
 }
 .fotonicole{
   justify-content: start;
@@ -46,19 +69,19 @@ p{
   text-align: left;
   justify-content: end;
     color: blanchedalmond;
-  margin-bottom: 50%;
+  margin-bottom: 40%;
   font-size: 25px;
   padding:50px;
   width: 50%;
-   background-color: rgb(57, 3, 3);
-   border: 10px solid #230202;
+   background-color: rgb(21, 1, 1);
+   border: 1px solid #000000;
 }
 
 .fotonicole {
     width: 300px;
     height: auto;
     border-radius: 12px;
-    margin-bottom: 50%;
+    margin-bottom: 40%;
     border: 5px solid rgb(35, 3, 3);
 }
 img:hover {
